--- a/app/views/datasets/show/2/index.html.erb
+++ b/app/views/datasets/show/2/index.html.erb
@@ -27,7 +27,7 @@ og: {
       <thead>
         <tr>
         	<th><%= sortable "name | Offender" %></th>
-          <th><%= sortable "city | Offender's address" %></th>
+          <th><%= sortable "city | Address" %></th>
           <th><%= sortable "violationdate | Date" %></th>
           <th><%= sortable "citationtype | Citation" %></th>
           <th><%= sortable "intersectiondetails | Intersection" %></th>
@@ -38,7 +38,7 @@ og: {
       	<% @record.paginate(:page => params[:page]).each do |record| %>
           <tr>
             <td data-title="Offender:"><%= record["name"] %></td>
-            <td data-title="Offender's address:"><%= record["city"] %>, <%= record["state"] %></td>
+            <td data-title="Address:"><%= record["city"] %>, <%= record["state"] %></td>
             <td data-title="Date:"><%= record["violationdate"] %></td>
             <td data-title="Citation:"><%= record["citationtype"] %></td>
             <td data-title="Intersection:"><%= record["intersectiondetails"] %></td>
