--- a/app/views/datasets/_embed.html.erb
+++ b/app/views/datasets/_embed.html.erb
@@ -1,4 +1,4 @@
 <div class="embed-chart hide-800">
 	<a href="#" class="text">Embed this database</a>
-	<textarea class="hide-desktop" rows="4" cols="75"><div class="center"><iframe frameborder="0" height="450" src="https://gadatabases.herokuapp.com/datasets/<%= @dataset.id %>" width="100%"></iframe></div></textarea>
+	<textarea class="hide-desktop" rows="4" cols="75"><div class="center"><iframe frameborder="0" height="450" src="https://gadatabases.herokuapp.com/datasets/<%= @dataset.id %>" width="100%"></iframe><p class="embed-subhead" style="margin-top: 10px;">Open the database in another window by <a href="https://gadatabases.herokuapp.com/datasets/<%= @dataset.id %>" target="_blank">clicking here</a>.</p></div></textarea>
 </div>
